apps/live/web/depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-depl
  namespace: harrytang-prod
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: web-depl
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-depl
      version: v1
  template:
    metadata:
      labels:
        app: web-depl
        version: v1
    spec:
      securityContext:
        fsGroup: 1001
      volumes:
        - name: next-data
          persistentVolumeClaim:
            claimName: next-data-pvc
      containers:
        - name: web
          image: ghcr.io/harrytang/web:v1.21.2 # {"$imagepolicy": "harrytang-prod:web"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          volumeMounts:
            - name: next-data
              mountPath: /app/.next
