apps/live/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-srv
  namespace: harrytang-prod
spec:
  selector:
    app: web-depl
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
