apps/live/web/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-http
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: http
  hostnames:
    - harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-https
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: https
  hostnames:
    - harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-srv
          port: 3000
    - matches:
        - path:
            type: Exact
            value: '/.well-known/microsoft-identity-association.json'
      backendRefs:
        - name: wellknown-identity
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-www-http
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-http
  hostnames:
    - www.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: harrytang.xyz
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-www-https
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: wildcard-https
  hostnames:
    - www.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: harrytang.xyz
            statusCode: 301
